fix(StreetView): ground realignment in read only mode

--- a/client/src/app/StreetView.css
+++ b/client/src/app/StreetView.css
@@ -58,4 +58,9 @@
   background: var(--bottom-background);
   z-index: -2;
   pointer-events: none;
+
+  body.read-only & {
+    /* TODO document magic number 80 */
+    height: calc(var(--street-section-baseline) - 80px);
+  }
 }
